--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ subjects:
 - !lcc 'E011'
 - !lcsh 'Indians of North America -- Illinois -- Antiquities'
 - !lcsh 'Illinois -- Antiquities'
+- GITenberg
 title: Note-book No. 1 of the Kickapoo Club
 url: http://www.gutenberg.org/ebooks/45440
